compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__bit_array_segment_conflicting_endianness2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 95
expression: "case <<1>> { <<1:native-big>> -> 1 }"
---
----- SOURCE CODE
case <<1>> { <<1:native-big>> -> 1 }

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.rakun:1:25
  │
1 │ case <<1>> { <<1:native-big>> -> 1 }
  │                         ^^^ This is an extra endianness specifier

Hint: This segment already has an endianness of native.
See: https://tour.rakun.run/data-types/bit-arrays/
